force-app/main/default/objects/Recommendation__c/Recommendation__c.object-meta.xml
<CustomObject>
    <label>Recommendation</label>
    <pluralLabel>Recommendations</pluralLabel>
    <nameField>
        <label>Recommendation Number</label>
        <type>AutoNumber</type>
        <displayFormat>REC-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Lead(상담 건) 기준으로 계산된 추천 결과 1건. Venue 전용이 아니라 RecommendationType__c로 드레스·메이크업 등 향후 추천 대상까지 확장 가능한 범용 구조.</description>
</CustomObject>