force-app/main/default/objects/Recommendation__c/fields/BudgetDiff__c.field-meta.xml
<CustomField>
    <fullName>BudgetDiff__c</fullName>
    <label>예산 대비 차액</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>0</scale>
    <description>양수면 예산보다 저렴, 음수면 초과</description>
</CustomField>