force-app/main/default/objects/Recommendation__c/fields/ConsSummary__c.field-meta.xml
<CustomField>
    <fullName>ConsSummary__c</fullName>
    <label>단점 요약</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Venue.VenueType__r.Cons__c에서 복사</description>
</CustomField>