force-app/main/default/objects/Recommendation__c/fields/ProsSummary__c.field-meta.xml
<CustomField>
    <fullName>ProsSummary__c</fullName>
    <label>장점 요약</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Venue.VenueType__r.Pros__c에서 복사</description>
</CustomField>