force-app/main/default/objects/Recommendation__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>순위</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>