force-app/main/default/objects/Recommendation__c/fields/ReasonText__c.field-meta.xml
<CustomField>
    <fullName>ReasonText__c</fullName>
    <label>추천 근거</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Flow의 Text Template으로 생성된 추천 이유 문장</description>
</CustomField>