force-app/main/default/objects/Recommendation__c/fields/RecommendationType__c.field-meta.xml
<CustomField>
    <fullName>RecommendationType__c</fullName>
    <label>추천 유형</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>장소</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>드레스</fullName>
            </value>
            <value>
                <fullName>메이크업</fullName>
            </value>
            <value>
                <fullName>사진</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>이번 스코프는 "장소"만 실제 로직 존재. 드레스/메이크업/사진은 향후 확장을 위해 미리 등록한 값</description>
</CustomField>