force-app/main/default/objects/Recommendation__c/fields/SessionDate__c.field-meta.xml
<CustomField>
    <fullName>SessionDate__c</fullName>
    <label>상담 일시</label>
    <type>DateTime</type>
</CustomField>