force-app/main/default/objects/Recommendation__c/fields/VenueNameSnapshot__c.field-meta.xml
<CustomField>
    <fullName>VenueNameSnapshot__c</fullName>
    <label>추천 당시 식당명</label>
    <type>Text</type>
    <length>120</length>
    <description>Venue가 나중에 변경/삭제되어도 추천 당시 이름을 남기기 위한 스냅샷</description>
</CustomField>